2021-04-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c,
	  src/z80/gen.c:
	  Remove old register allocator code from z80-related backends.

2021-04-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c,
	  src/z80/ralloc.c,
	  .version,
	  doc/sdccman.lyx:
	  Deprecate --oldralloc for z80-related backends.

2021-04-02 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  Fix one of highlighted bugs by previous change.

2021-04-01 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  Partially fix bug #3203, but highlights new bugs.

2021-04-01 Sergey Belyashov <sergey.belyashov@gmail.com>

	* sdas/asz80/z80mch.c:
	  Enable undocumented Z80 instructions for Z80N.

2021-04-01 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  Partially fix bug #3203.

2021-04-01 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph.def:
	  Fix many regressions caused by changes in r12173.

2021-03-27 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph.def:
	  Partially fix bug #3203.

2021-03-27 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph.def:
	  Add new rules for pushing and treating xor a like #0.

2021-03-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix issues in handling of (iy) operands (last part of fix for bug #3202).

2021-03-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix an issue affecting 4-byte swap with both operands on extended stack.

2021-03-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix handling of extended stack in addition and subtraction.

2021-03-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix handling of frame pointer omission in dry run.

2021-03-25 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/_strcmp.c:
	  strcmp optimization.

2021-03-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/gen.c:
	  Emit ldhl for calls on SM83.
