@@ -49,7 +49,6 @@ extern Z80_OPTS z80_opts;
 
 #define IY_RESERVED (z80_opts.reserveIY)
 
-#define OPTRALLOC_HL 1
 #define OPTRALLOC_IY !(IY_RESERVED || IS_GB)
 
 enum
